# Generated by Django 5.2.17 on 2026-09-03 11:37

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Especialidad',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('is_active', models.BooleanField(default=True, verbose_name='activo')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='fecha de creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='fecha de actualización')),
                ('nombre', models.CharField(help_text='Nombre de la disciplina, por ejemplo: Cardiología, Pediatría, Radiología, etc.', max_length=60, unique=True, verbose_name='Especialidad')),
                ('profesion', models.CharField(help_text='Nombre de la profesión, por ejemplo: Cardiólogo, Pediatra, Radiólogo, etc.', max_length=60, unique=True, verbose_name='Profesión')),
                ('imagen', models.ImageField(blank=True, null=True, upload_to='especialidades/', verbose_name='Imagen')),
            ],
            options={
                'verbose_name': 'especialidad',
                'verbose_name_plural': 'especialidades',
                'db_table': 'orga_especialidades',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Grupo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('is_active', models.BooleanField(default=True, verbose_name='activo')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='fecha de creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='fecha de actualización')),
                ('nombre', models.CharField(max_length=50, verbose_name='nombre')),
                ('codigo', models.CharField(max_length=16, unique=True, verbose_name='código')),
            ],
            options={
                'verbose_name': 'grupo',
                'verbose_name_plural': 'grupos',
                'db_table': 'orga_grupos',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Clinica',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('is_active', models.BooleanField(default=True, verbose_name='activo')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='fecha de creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='fecha de actualización')),
                ('nombre', models.CharField(max_length=100, verbose_name='nombre')),
                ('codigo', models.CharField(max_length=16, verbose_name='código')),
                ('domicilio', models.CharField(blank=True, max_length=255, verbose_name='domicilio')),
                ('ciudad', models.CharField(blank=True, max_length=100, verbose_name='ciudad')),
                ('codigo_postal', models.CharField(blank=True, max_length=10, verbose_name='código postal')),
                ('telefono', models.CharField(blank=True, max_length=20, verbose_name='teléfono')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='correo electrónico')),
                ('especialidades', models.ManyToManyField(blank=True, related_name='clinicas', to='organizacion.especialidad', verbose_name='especialidades')),
                ('grupo', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='%(class)ss', to='organizacion.grupo', verbose_name='grupo')),
            ],
            options={
                'verbose_name': 'clínica',
                'verbose_name_plural': 'clínicas',
                'db_table': 'orga_clinicas',
                'ordering': ['grupo', 'nombre'],
                'constraints': [models.UniqueConstraint(fields=('grupo', 'codigo'), name='orga_clinica_unique_grupo_codigo')],
            },
        ),
    ]
