# Generated by Django 5.2.17 on 2026-09-03 11:37

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('organizacion', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Paciente',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('is_active', models.BooleanField(default=True, verbose_name='activo')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='fecha de creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='fecha de actualización')),
                ('nhc', models.CharField(help_text='número de historia clínica', max_length=20, verbose_name='NHC')),
                ('nombre', models.CharField(max_length=50, verbose_name='nombre')),
                ('apellido', models.CharField(max_length=50, verbose_name='apellido')),
                ('documento_tipo', models.CharField(choices=[('dni', 'DNI'), ('nie', 'NIE'), ('pass', 'Pasaporte'), ('otro', 'Otro')], max_length=4, verbose_name='Documento tipo')),
                ('documento_numero', models.CharField(max_length=12, verbose_name='Documento número')),
                ('fecha_nacimiento', models.DateField(verbose_name='fecha de nacimiento')),
                ('sexo', models.CharField(choices=[('M', 'Masculino'), ('F', 'Femenino'), ('X', 'Desconocido')], max_length=1, verbose_name='sexo')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='correo electrónico')),
                ('telefono', models.CharField(blank=True, max_length=12, verbose_name='teléfono')),
                ('domicilio', models.CharField(blank=True, max_length=255, verbose_name='domicilio')),
                ('ciudad', models.CharField(blank=True, max_length=100, verbose_name='ciudad')),
                ('codigo_postal', models.CharField(blank=True, max_length=10, verbose_name='código postal')),
                ('grupo', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='%(class)ss', to='organizacion.grupo', verbose_name='grupo')),
            ],
            options={
                'verbose_name': 'paciente',
                'verbose_name_plural': 'pacientes',
                'db_table': 'paci_pacientes',
                'ordering': ['grupo', 'apellido', 'nombre'],
                'constraints': [models.UniqueConstraint(fields=('grupo', 'nhc'), name='paci_paciente_unique_grupo_nhc'), models.UniqueConstraint(fields=('grupo', 'documento_tipo', 'documento_numero'), name='paci_paciente_unique_grupo_documento')],
            },
        ),
    ]
