# Generated by Django 5.2.17 on 2026-09-03 11:37

import django.contrib.auth.models
import django.contrib.auth.validators
import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
        ('organizacion', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='PermisoPersonalizado',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
            ],
            options={
                'verbose_name': 'permiso personalizado',
                'verbose_name_plural': 'permisos personalizados',
                'managed': False,
                'default_permissions': (),
            },
        ),
        migrations.CreateModel(
            name='Rol',
            fields=[
            ],
            options={
                'verbose_name': 'rol',
                'verbose_name_plural': 'roles',
                'proxy': True,
                'indexes': [],
                'constraints': [],
            },
            bases=('auth.group',),
            managers=[
                ('objects', django.contrib.auth.models.GroupManager()),
            ],
        ),
        migrations.CreateModel(
            name='CustomUser',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='email address')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('grupo', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='usuarios', to='organizacion.grupo', verbose_name='grupo')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'usuario',
                'verbose_name_plural': 'usuarios',
                'db_table': 'usua_usuarios',
                'ordering': ['username'],
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='RolPerfil',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('codigo', models.CharField(help_text='identificador estable del rol (ver apps.usuarios.roles.Roles); no cambia aunque se renombre el rol desde el admin.', max_length=20, unique=True, verbose_name='código')),
                ('requiere_clinica', models.BooleanField(default=True, help_text='si el rol es de alcance grupo/plataforma (ej. administrador de grupo), desmarcar: sus asignaciones no llevan clínica concreta.', verbose_name='requiere clínica')),
                ('redireccion_login', models.CharField(blank=True, help_text='url name de django (resuelto con reverse()) al que se redirige a un usuario justo tras iniciar sesión cuando este es su rol de mayor prioridad (ver roles.PRIORIDAD_ROLES_LOGIN); vacío = sin destino propio.', max_length=100, verbose_name='redirección tras login')),
                ('rol', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='perfil', to='usuarios.rol', verbose_name='rol')),
            ],
            options={
                'verbose_name': 'perfil de rol',
                'verbose_name_plural': 'perfiles de rol',
                'db_table': 'usua_rol_perfiles',
                'ordering': ['codigo'],
            },
        ),
        migrations.CreateModel(
            name='UsuarioClinica',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('is_active', models.BooleanField(default=True, verbose_name='activo')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='fecha de creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='fecha de actualización')),
                ('clinica', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='usuarios_asignados', to='organizacion.clinica', verbose_name='clínica')),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='clinicas_asignadas', to=settings.AUTH_USER_MODEL, verbose_name='usuario')),
                ('rol', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='asignaciones', to='usuarios.rol', verbose_name='rol')),
            ],
            options={
                'verbose_name': 'asignación de usuario a clínica',
                'verbose_name_plural': 'asignaciones de usuario a clínica',
                'db_table': 'usua_usuario_clinicas',
                'ordering': ['usuario', 'clinica'],
                'constraints': [models.UniqueConstraint(fields=('usuario', 'clinica'), name='usua_usuarioclinica_unique_usuario_clinica')],
            },
        ),
    ]
